--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.26.1",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "17.0.2",
     "react-icons": "^4.7.1",
     "react-spinners": "^0.13.7",
